--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -8,7 +8,6 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="../../favicon.ico">
-
 <title>Cook at Home | Despensa Mágica</title>
 
 <!-- Bootstrap core CSS -->
@@ -53,7 +52,7 @@
 
 				<form class="navbar-form navbar-right">
 					<div class="form-group">
-						<input type="text" placeholder="Email" class="form-control">
+						<input type="email" placeholder="Email" class="form-control">
 					</div>
 					<div class="form-group">
 						<input type="password" placeholder="Password" class="form-control">
