Entrega 5 - CRUD (Update)

--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -40,7 +40,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Cook at Home</a>
+				<a class="navbar-brand" href="home.html">Cook at Home</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 
@@ -94,8 +94,6 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-hidden="true">×</button>
 					<h1 class="text-center">Pesquisar</h1>
 				</div>
 				<div class="modal-body">
