--- a/WebContent/cadastrarigredientes.html
+++ b/WebContent/cadastrarigredientes.html
@@ -1,63 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Cadastrar Igredientes</title>
+<title>Cadastrar Igredientes</title>
 
-  <meta name="description" content="Cadastar Igredientes">
-  <meta name="author" content="Isabela Ilma Gonçalves">
+<meta name="description" content="Cadastar Igredientes">
+<meta name="author" content="Isabela Ilma Gonçalves">
 
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <script src="bootstrap/js/jquery.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script src="cadastrarigredientes.js"></script>
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="bootstrap/js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="cadastrarigredientes.js"></script>
 
 
 </head>
 <body>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Cadastrar Igredientes</h1>
-
-      <div id="form-well" class="well">
-        <h1 class="text-center">Igrediente
-        </h1>
-
-        <form id="form-categoria" action="#">
-
-          <div id="form-group-nome" class="form-group">
-            <label for="nome-input" class="control-label">Nome:</label>
-            <input id="nome-input" type="text" class="form-control" name="nome" value="">
-            <span id="help-block-nome" class="help-block"></span></div>
-
-          <button type="submit" class="btn btn-success">Salvar</button>
-        </form>
-      </div>
-      <button id="botao-novo-igrediente" class="btn btn-success">Cadastrar Novo Igrediente</button>
-      <hr>
-      <h2>Lista de Igredientes</h2>
-      <table  class="table table-striped table-hover">
-        <thead>
-        <tr>
-          <th>Id</th>
-          <th>Creation</th>
-          <th>Nome Igrediente</th>
-        </tr>
-        </thead>
-        <tbody id="tabela-categoria">
+	<!-- Navbar -->
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="home.html">Cook at Home</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
 
 
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
+				<ul class="nav navbar-nav">
+					<li><a href="#">Cadastrar Receitas</a></li>
+					<li><a href="cadastrarigredientes.html">Cadastrar
+							Igredientes</a></li>
+				</ul>
 
+
+				<form class="navbar-form navbar-right">
+					<div class="form-group">
+						<input type="email" placeholder="Email" class="form-control">
+					</div>
+					<div class="form-group">
+						<input type="password" placeholder="Password" class="form-control">
+					</div>
+					<button type="submit" class="btn btn-success">Sign in</button>
+				</form>
+			</div>
+			<!--/.navbar-collapse -->
+		</div>
+	</nav>
+
+	<!-- Carousel -->
+	<div id="carousel-example-generic" class="carousel slide"
+		data-ride="carousel">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<img src="images/CookAtHome.png" alt="Cook at Home" />
+				<div class="carousel-caption">...</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Jumbotron -->
+	<div class="jumbotron">
+		<div class="container">
+			<!-- Tabela -->
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>Cadastrar Igredientes</h1>
+
+						<div id="form-well" class="well">
+							<form id="form-categoria" action="#">
+
+								<div id="form-group-nome" class="form-group">
+									<label for="nome-input" class="control-label">Nome:</label> <input
+										id="nome-input" type="text" class="form-control" name="nome"
+										value=""> <span id="help-block-nome"
+										class="help-block"></span>
+								</div>
+
+								<button type="submit" class="btn btn-success">Salvar</button>
+							</form>
+						</div>
+						<button id="botao-novo-igrediente" class="btn btn-success">Cadastrar
+							Novo Igrediente</button>
+						<hr>
+						<h2>Lista de Igredientes</h2>
+						<table class="table table-striped table-hover">
+							<thead>
+								<tr>
+									<th>Id</th>
+									<th>Data Criação</th>
+									<th>Nome Igrediente</th>
+								</tr>
+							</thead>
+							<tbody id="tabela-categoria">
+
+
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Rodapé -->
+	<div class="container">
+		<hr>
+
+		<footer>
+			<p>&copy; Isabela Ilma Gonçalves 2015</p>
+		</footer>
+	</div>
 
 </body>
 </html>
