--- a/WebContent/cadastrarigredientes.html
+++ b/WebContent/cadastrarigredientes.html
@@ -78,7 +78,7 @@
 						<h1>Cadastrar Igredientes</h1>
 
 						<div id="form-well" class="well">
-							<form id="form-categoria" action="#">
+							<form id="form-igrediente" action="#">
 
 								<div id="form-group-nome" class="form-group">
 									<label for="nome-input" class="control-label">Nome:</label> <input
@@ -102,7 +102,7 @@
 									<th>Nome Igrediente</th>
 								</tr>
 							</thead>
-							<tbody id="tabela-categoria">
+							<tbody id="tabela-igrediente">
 
 
 							</tbody>
