--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -47,7 +47,7 @@
 
 				<ul class="nav navbar-nav">
 					<li><a href="#">Cadastrar Receitas</a></li>
-					<li><a href="cadastrarigredientes.html">Cadastrar Igredientes</a></li>
+					<li><a href="cadastraringredientes.html">Cadastrar Ingredientes</a></li>
 				</ul>
 
 
