--- a/WebContent/cadastraringredientes.html
+++ b/WebContent/cadastraringredientes.html
@@ -5,15 +5,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Cadastrar Igredientes</title>
+<title>Cadastrar Ingredientes</title>
 
-<meta name="description" content="Cadastar Igredientes">
+<meta name="description" content="Cadastar Ingredientes">
 <meta name="author" content="Isabela Ilma Gonçalves">
 
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="bootstrap/js/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="cadastrarigredientes.js"></script>
+<script src="cadastraringredientes.js"></script>
 
 
 </head>
@@ -37,8 +37,8 @@
 
 				<ul class="nav navbar-nav">
 					<li><a href="#">Cadastrar Receitas</a></li>
-					<li><a href="cadastrarigredientes.html">Cadastrar
-							Igredientes</a></li>
+					<li><a href="cadastraringredientes.html">Cadastrar
+							Ingredientes</a></li>
 				</ul>
 
 
@@ -75,10 +75,10 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Cadastrar Igredientes</h1>
+						<h1>Cadastrar Ingredientes</h1>
 
 						<div id="form-well" class="well">
-							<form id="form-igrediente" action="#">
+							<form id="form-ingrediente" action="#">
 
 								<div id="form-group-nome" class="form-group">
 									<label for="nome-input" class="control-label">Nome:</label> <input
@@ -90,19 +90,19 @@
 								<button type="submit" class="btn btn-success">Salvar</button>
 							</form>
 						</div>
-						<button id="botao-novo-igrediente" class="btn btn-success">Cadastrar
-							Novo Igrediente</button>
+						<button id="botao-novo-ingrediente" class="btn btn-success">Cadastrar
+							Novo Ingrediente</button>
 						<hr>
-						<h2>Lista de Igredientes</h2>
+						<h2>Lista de Ingredientes</h2>
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
 									<th>Id</th>
 									<th>Data Criação</th>
-									<th>Nome Igrediente</th>
+									<th>Nome Ingrediente</th>
 								</tr>
 							</thead>
-							<tbody id="tabela-igrediente">
+							<tbody id="tabela-ingrediente">
 
 
 							</tbody>
