--- a/WebContent/cadastraringredientes.html
+++ b/WebContent/cadastraringredientes.html
@@ -107,6 +107,7 @@
 
 							</tbody>
 						</table>
+						<img id="listar-ajax-loader" src="images/ajax-loader.gif" hidden="hidden"/>
 					</div>
 				</div>
 			</div>
